--- a/AniWalk/src/main/webapp/WEB-INF/static/css/main.css
+++ b/AniWalk/src/main/webapp/WEB-INF/static/css/main.css
@@ -4,69 +4,27 @@
 font-family: 'Noto Sans KR', sans-serif
 */
 
-:root{
-    --main-color: #71d5c2;
-    --white: #fafafa;
-}
-ul {
-    list-style: none;
-    padding: 0;
-    margin: 20px;
-}
+@import 'reset.css';
+@import 'variable.css';
+
+
+/* components */
+@import 'components/main-nav.css';
+
+
 ::-webkit-scrollbar {
     display: none; /* Chrome, Safari, Opera*/
 }
-/**************************************************
 
-    modal-bg
-
-***************************************************/
-.modal-bg{
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.4);
-    position: fixed;
-    top: 0;
-    left: 0;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.modal-content{
-    width: 70%;
-    height: 70%;
-    background: var(--white);
-    padding: 10px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.hidden{
-    display: none;
-}
 /**************************************************
 
     indexTemplate
 
 ***************************************************/
-html{
-    width: 100%;
-    height: 100%;
-    font-family: 'Noto Sans KR', sans-serif
-}
-body{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
 nav{
     width: 100%;
     height: 70px;
-  	border-bottom: 1px solid #80808026;
+  	border-bottom: 1px solid var(--nav-border-bottm-color);
 
     padding: 5px;
 }
@@ -84,7 +42,7 @@ article{
 .innerBox{
     width: 300px;
     height: 350px;
-    background: #71d5c2b8;
+    background: var(--light-green-opacity);
     color: var(--white);
     display: flex;
     flex-direction: column;
@@ -105,7 +63,7 @@ article{
 footer{
     width: 100%;
     height: 6%;
-    background: var(--main-color);
+    background: var(--light-green);
     color: var(--white);
     margin: 0;
     text-align: center;
@@ -117,32 +75,7 @@ footer{
     main-nav
 
 ***************************************************/
-.main-nav{
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: center;
-}
-.main-nav img{
-    width: 120px;
-    height: 100px;
-    position: relative;
-    top: -23px;
-    left: -10px;
-}
-.nav-ul{
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-around;
-    margin: 16px 100px auto auto;
-}
-.nav-ul li{
-    margin: auto 30px;
-    font-size: 1.8rem;
-}
-.nav-ul li:hover{
-    cursor: pointer;
-}
+
 .apply-nav{
 	display: flex;
     flex-wrap: nowrap;
