index페이지 css 수정 & footer 수정

--- a/AniWalk/src/main/webapp/WEB-INF/static/css/variable.css
+++ b/AniWalk/src/main/webapp/WEB-INF/static/css/variable.css
@@ -2,6 +2,6 @@
     --light-green: #71d5c2;
     --light-green-opacity: #71d5c2b8;
     --white: #fafafa;
-    
-    --nav-border-bottm-color: #80808026;
+    --black: #161616;
+    --nav-border-bottom-color: #80808026;
 }
