--- a/AniWalk/src/main/webapp/WEB-INF/static/css/main.css
+++ b/AniWalk/src/main/webapp/WEB-INF/static/css/main.css
@@ -10,6 +10,10 @@ font-family: 'Noto Sans KR', sans-serif
 
 /* components */
 @import 'components/main-nav.css';
+@import 'components/footer.css';
+
+/* screens */
+@import 'screens/index-screen.css';
 
 
 ::-webkit-scrollbar {
@@ -24,55 +28,15 @@ font-family: 'Noto Sans KR', sans-serif
 nav{
     width: 100%;
     height: 70px;
-  	border-bottom: 1px solid var(--nav-border-bottm-color);
+  	border-bottom: 1px solid var(--nav-border-bottom-color);
 
     padding: 5px;
 }
-article{
-    width: 100%;
-}
-.main-bg{
-	width: 100%;
-	height: 600px;
-	
-	background-image: url("/aniwalk/images/index_bg.jpg");
-	background-repeat : no-repeat;
-	background-size : cover;
-}
-.innerBox{
-    width: 300px;
-    height: 350px;
-    background: var(--light-green-opacity);
-    color: var(--white);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 
-    position: absolute;
-    top: 33%;
-    right: 8%;
-}
-.innerBox label{
-    font-size: 2rem;
-}
-.innerBox button{
-    display: block;
-    margin-top: 30px;
-}
-footer{
-    width: 100%;
-    height: 6%;
-    background: var(--light-green);
-    color: var(--white);
-    margin: 0;
-    text-align: center;
-    padding: 10px;
-}
 
 /**************************************************
 
-    main-nav
+    apply-nav
 
 ***************************************************/
 
