--- a/AniWalk/src/main/webapp/WEB-INF/static/css/components/main-nav.css
+++ b/AniWalk/src/main/webapp/WEB-INF/static/css/components/main-nav.css
@@ -1,21 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 .main-nav{
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
+    margin-top: -23px;
+    
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+}
+.main-nav a, .main-nav a:visited{
+	color: black;
+	text-decoration: none;
+} 
+.main-nav a:hover{
+	color: var(--light-green-opacity);
+	text-decoration: none;
+	font-size: 19px;
 }
 .main-nav__logo{
     width: 120px;
     height: 100px;
-    position: relative;
-    top: -23px;
-    left: -10px;
 }
+.main-nav__logo:hover{
+	transform: scale(1.2);
+	transition-duration: .5s
+}
+	
 .main-nav__list{
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-around;
-    margin: 16px 100px auto auto;
+    margin: 0 auto;
 }
 .main-nav__list-items{
     margin: auto 30px;
