회원 프사 코드 수정   - jstl 코드로 바꿈: 프사 없을때는 aniwalk 기본 사진, 있으면 있는 사진을 프로필로 등록.
수정 모달 끄는 버튼 jquery 처리 및 hover

--- a/AniWalk/src/main/webapp/WEB-INF/static/css/owner.css
+++ b/AniWalk/src/main/webapp/WEB-INF/static/css/owner.css
@@ -116,6 +116,11 @@ button{
     top: 2px;
     right: 3%;
 }
+
+.modal-content .close-btn:hover{
+	background-color: #9e9e9e;
+}
+
 .modal-content .btn-line .btn-default{
     background: var(--darkgray);
     color: var(--white);
