워커 회원가입시   - 동의 체크 부분 cursor css 추가   - 이메일 유효성 정규 표현식 수정     => naver, hanmail, gmail 양식만 입력 가능하게 구현.

--- a/AniWalk/src/main/webapp/WEB-INF/static/css/screens/walkerApply-screen.css
+++ b/AniWalk/src/main/webapp/WEB-INF/static/css/screens/walkerApply-screen.css
@@ -57,6 +57,7 @@
 }
 .terms__list li i{
 	margin-right: 10px;
+	cursor: pointer;
 }
 .terms__list li label, .terms__list li span{
 	cursor: pointer;
