--- a/AniWalk/src/main/webapp/WEB-INF/static/css/owner.css
+++ b/AniWalk/src/main/webapp/WEB-INF/static/css/owner.css
@@ -1409,7 +1409,7 @@ body{
     background-position:0 0;
 }
 .starR1{
-    background: url('http://miuu227.godohosting.com/images/icon/ico_review.png') no-repeat -52px 0;
+    background: url('http://miuu227.godohosting.com/images/icon/ico_review.png') no-repeat -52px 0px;
     background-size: auto 100%;
     width: 15px;
     height: 30px;
@@ -1418,7 +1418,7 @@ body{
     cursor: pointer;
 }
 .starR2{
-    background: url('http://miuu227.godohosting.com/images/icon/ico_review.png') no-repeat right 0;
+    background: url('http://miuu227.godohosting.com/images/icon/ico_review.png') no-repeat right 0px top 0px;
     background-size: auto 100%;
     width: 15px;
     height: 30px;
